...
            .onAppear {
                isActive = true
            }
            .onDisappear {
                isActive = false
            }
            .alert(Text("Authentication Required", bundle: .module), isPresented: isPresented, presenting: context) { context in
                SecureField(text: $password) {
                    Text(PasswordFieldType.password.localizedStringResource)
                }
                .textContentType(.password)
                .autocorrectionDisabled()
                .textInputAutocapitalization(.never)
...
