//
// This source file is part of the Grove open-source project
//
// SPDX-FileCopyrightText: 2023 Stanford University and the project authors (see CONTRIBUTORS.md)
//
// SPDX-License-Identifier: MIT
//

import XCTest
import XCTestExtensions


final class FirebaseAccountStorageTests: XCTestCase {
    override func setUp() {
        continueAfterFailure = false
    }

    override func setUp() async throws {
        try await FirebaseClient.deleteAllAccounts()
        try await FirebaseClient.waitForAccounts([])
    }


    @MainActor
    func testAdditionalAccountStorage() async throws {
        let app = XCUIApplication()
        app.launchArguments = ["--account-storage"]
        XCTAssert(app.launchAndWait(for: app.buttons["FirebaseAccount"]), "The app did not come up.")

        app.buttons["FirebaseAccount"].tap()

        try app.signup(
            username: "test@username1.edu",
            password: "TestPassword1",
            givenName: "Test1",
            familyName: "Username1",
            biography: "Hello Stanford"
        )


        XCTAssertTrue(app.buttons["Account Overview"].wait(for: \.isHittable, toEqual: true, timeout: 5.0))
        app.buttons["Account Overview"].tap()
        XCTAssertTrue(app.staticTexts["Biography, Hello Stanford"].waitForExistence(timeout: 2.0))


        // TEST ACCOUNT EDIT
        XCTAssertTrue(app.navigationBars.buttons["Edit"].wait(for: \.isHittable, toEqual: true, timeout: 5.0))
        app.navigationBars.buttons["Edit"].tap()

        try app.textFields["Biography"].enter(value: "2")

        XCTAssertTrue(app.navigationBars.buttons["Done"].wait(for: \.isHittable, toEqual: true, timeout: 5.0))
        app.navigationBars.buttons["Done"].tap()

        XCTAssertTrue(app.staticTexts["Biography, Hello Stanford2"].waitForExistence(timeout: 2.0))

        // TEST ACCOUNT DELETION
        XCTAssertTrue(app.navigationBars.buttons["Edit"].wait(for: \.isHittable, toEqual: true, timeout: 5.0))
        app.navigationBars.buttons["Edit"].tap()

        XCTAssertTrue(app.buttons["Delete Account"].wait(for: \.isHittable, toEqual: true, timeout: 4.0))
        app.buttons["Delete Account"].tap()

        let alert = "Are you sure you want to delete your account?"
        XCTAssertTrue(app.alerts[alert].waitForExistence(timeout: 6.0))
        let delete = app.alerts[alert].scrollViews.otherElements.buttons["Delete"]
        XCTAssertTrue(delete.wait(for: \.isHittable, toEqual: true, timeout: 5.0))
        delete.tap()

        XCTAssertTrue(app.alerts["Authentication Required"].waitForExistence(timeout: 2.0))
        XCTAssertTrue(app.alerts["Authentication Required"].secureTextFields["Password"].waitForExistence(timeout: 0.5))
        app.typeText("TestPassword1") // the password field has focus already
        XCTAssertTrue(app.alerts["Authentication Required"].buttons["Sign In"].waitForExistence(timeout: 0.5))
        app.alerts["Authentication Required"].buttons["Sign In"].tap()

        try await FirebaseClient.waitForAccounts([])
    }
}
